add javadoc and lombok